--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,14 @@ jobs:
           go-version: '1.23.x'
 
       - name: Download dependencies
-        run: go mod download
+        run: |
+          cd app
+          go mod download
 
       - name: Run tests
-        run: go test
+        run: |
+          cd app
+          go test
 
   lint:
     name: Lint Terraform
